<resources>
    <string name="app_name">GeTremp</string>

    <!--
  Loading strings
  -->

    <string name="loading_str">טוען</string>


    <!--
      Registration1 fragment strings
      -->
    <string name="reg1_title">אמת את מספרך</string>

    <string name="reg1_text_line1_1">אפליקציית </string>
    <string name="reg1_text_line1_2"> GeTremp </string>
    <string name="reg1_text_line1_3"> תשלח באופן חד פעמי</string>


    <string name="reg1_text_line2">סמס על מנת לוודא מספר טלפון זה.</string>
    <string name="reg1_text_line3">אנא הזן את מספר הטלפון שלך</string>
    <string name="reg1_text_line4">כולל קידומת:</string>

    <string name="hyphen">-</string>
    <string name="prefix">קידומת</string>
    <string name="phone_num">מספר</string>
    <string name="reg1_idx">שלב 1/3</string>

    <string name="reg1_il_code">+972</string>

    <!--
      Registration2 fragment strings
      -->
    <string name="reg2_title">וידוא SMS</string>

    <string name="reg2_text_line1">אנא הזן את הסיסמה אשר נשלחה</string>
    <string name="reg2_text_line2">אל מספרך.</string>

    <string name="reg2_timer_start">2:00</string>

    <string name="reg2_text_line3">במידה והסיסמה לא התקבלה</string>
    <string name="reg2_text_line4">תוך זמן קצר, עבור אל שלב 1</string>

    <string name="reg2_idx">שלב 2/3</string>

    <!--
     Registration3 fragment strings
     -->
    <string name="reg3_title">פרטים אישיים</string>

    <string name="reg3_text_line1">שלב אחרון ויוצאים לדרך!</string>
    <string name="reg3_text_line2">אנא מלא את הפרטים הבאים:</string>

    <string name="reg3_private_name">שם פרטי*</string>
    <string name="reg3_surname_name">שם משפחה*</string>
    <string name="reg3_email">דוא"ל*</string>
    <string name="reg3_address">כתובת</string>
    <string name="reg3_profile_picture">תמונת פרופיל:</string>
    <string name="reg3_avatar_descriptor">Default Avatar Image</string>
    <string name="reg3_avatar_mask_descriptor">Default Avatar Rounded Mask</string>


    <string name="reg3_field_descriptor">*- שדה חובה(לפחות שני תווים בשדה)</string>
    <string name="reg3_field_length">0 / 50</string>

    <string name="reg3_idx">שלב 3/3</string>


    <!--
 GroupSelection activity strings
 -->
    <string name="gs_title">בחר קבוצה</string>
    <string name="gs_user_name">שם משתמש</string>
    <string name="gs_user_address">כתובת</string>

    <string name="gs_diag_header_tv">יצירת קבוצה</string>
    <string name="gs_diag_text">שם קבוצה</string>
    <string name="gs_diag_confirm">צור קבוצה</string>
    <string name="gs_diag_exit">בטל</string>

    <string name="gs_back_text">האם אתה בטוח שברצונך לצאת?</string>
    <string name="gs_back_out">צא</string>
    <string name="gs_back_stay">לא</string>

    <!--
TrempSelection activity strings
-->
    <string name="ts_driver_name">פותח הנסיעה</string>
    <string name="ts_seats">נוסעים:</string>
    <string name="ts_num_of_seats">0/5</string>
    <string name="ts_dest">יעד</string>
    <string name="ts_origin">מוצא</string>
    <string name="ts_day">יום</string>
    <string name="ts_hour">00:00</string>

    <string name="ts_regular_btn">קבועות</string>
    <string name="ts_temp_btn">ארעיות</string>

    <string name="ts_add_tremp">פתיחת נסיעה</string>
    <string name="ts_group_name">שם קבוצה</string>


</resources>
