<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.Registration3Fragment">

    <TextView
        android:id="@+id/reg3_tw1"
        style="@style/reg_text_orange_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg3_text_line1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/reg3_tw2"
        style="@style/reg_text_orange_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg3_text_line2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg3_tw1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/reg3_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:ems="50"
        android:inputType="textPersonName"
        android:maxLength="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg3_tw2"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/reg3_surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg3_name"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/reg3_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="textEmailSubject"
        android:maxLength="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg3_surname"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/reg3_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg3_email"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/reg3_name_hint"
        style="@style/reg_text_orange_med_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg3_private_name"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/reg3_name"
        app:layout_constraintEnd_toEndOf="@+id/reg3_name"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/reg3_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/reg3_surname_hint"
        style="@style/reg_text_orange_med_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/reg3_surname_name"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/reg3_surname"
        app:layout_constraintEnd_toEndOf="@+id/reg3_surname"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/reg3_surname"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/reg3_email_hint"
        style="@style/reg_text_orange_med_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg3_email"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/reg3_email"
        app:layout_constraintEnd_toEndOf="@+id/reg3_email"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/reg3_email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/reg3_address_hint"
        style="@style/reg_text_orange_med_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg3_address"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/reg3_address"
        app:layout_constraintEnd_toEndOf="@+id/reg3_address"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/reg3_address"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/reg3_avatar_tw"
        style="@style/reg_text_orange_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/reg3_profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg3_address"
        app:layout_constraintVertical_bias="0.15" />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/reg3_avatar_image"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:contentDescription="@string/reg3_avatar_descriptor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reg3_avatar_tw"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg3_address"
        app:layout_constraintVertical_bias="0.10"
        android:src="@drawable/baseline_account_circle_white_48" />

    <Button
        android:id="@+id/reg3_next_btn"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/button_round_green_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg3_address"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/reg3_stage3"
        style="@style/reg_text_orange_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg3_idx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/reg3_field_hint"
        style="@style/reg_text_orange_med_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg3_field_descriptor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <FrameLayout
        android:id="@+id/reg3_avatar_frame"
        android:layout_width="88dp"
        android:layout_height="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reg3_avatar_tw"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg3_address"
        app:layout_constraintVertical_bias="0.120000005">

    </FrameLayout>
</android.support.constraint.ConstraintLayout>