<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ts_li_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_rounded_bg_orange">

    <ImageView
        android:id="@+id/ts_li_right_arrow_up"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/ts_li_right_arrow_mid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toEndOf="@+id/ts_li_image"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/orange_arrow" />

    <ImageView
        android:id="@+id/ts_li_right_arrow_mid"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toEndOf="@+id/ts_li_image"
        app:layout_constraintTop_toBottomOf="@+id/ts_li_right_arrow_up"
        app:srcCompat="@drawable/orange_arrow" />

    <ImageView
        android:id="@+id/ts_li_right_arrow_down"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        app:srcCompat="@drawable/orange_arrow" />

    <TextView
        android:id="@+id/ts_li_driver_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/ts_driver_name"
        android:textAppearance="@style/reg_text_green_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ts_li_right_arrow_down"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ts_li_image"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/baseline_account_circle_white_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ts_li_driver_name"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ts_li_seats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="3dp"
        android:text="@string/ts_seats"
        android:textAppearance="@style/reg_text_orange_med_small"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ts_li_image"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ts_li_num_of_seats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ts_num_of_seats"
        android:textAppearance="@style/reg_text_orange_med_small"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ts_li_seats"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ts_li_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/ts_day"
        android:textAppearance="@style/reg_text_orange_med_small"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ts_li_image"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ts_li_seats"
        app:layout_constraintVertical_bias="0.07999998" />

    <TextView
        android:id="@+id/ts_li_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/ts_origin"
        android:textAppearance="@style/reg_text_orange_med_small"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ts_li_image"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ts_li_day"
        app:layout_constraintVertical_bias="0.23000002" />

    <ImageView
        android:id="@+id/ts_li_right_dest_arrow"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/ts_li_origin"
        app:layout_constraintEnd_toStartOf="@+id/ts_li_origin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ts_li_origin"
        app:srcCompat="@drawable/left_direction_arrow" />

    <TextView
        android:id="@+id/ts_li_dest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ts_dest"
        android:textAppearance="@style/reg_text_orange_med_small"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ts_li_right_dest_arrow"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ts_li_origin"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ts_li_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ts_hour"
        android:textAppearance="@style/reg_text_orange_med_small"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ts_li_day"
        app:layout_constraintEnd_toStartOf="@+id/ts_li_day"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ts_li_day" />


</android.support.constraint.ConstraintLayout>