<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorLightGrey"
    android:minHeight="250dp"
    tools:layout_editor_absoluteY="25dp">

    <View
        android:id="@+id/gs_diag_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorLightOrange" />

    <TextView
        android:id="@+id/gs_diag_header_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gs_diag_header_tv"
        android:textAppearance="@style/gs_text_white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/gs_diag_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gs_diag_header" />

    <EditText
        android:id="@+id/gs_diag_name"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/gs_diag_text"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAppearance="@style/reg_text_orange_large"
        android:textColor="@color/colorLightOrange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gs_diag_header"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/gs_diag_cancel_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/gs_diag_exit"
        android:textAppearance="@style/reg_text_green"
        android:textColor="@color/colorLightestGreen"
        app:layout_constrainedHeight="false"
        app:layout_constrainedWidth="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gs_diag_accept_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/gs_diag_accept_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/gs_diag_confirm"
        android:textAppearance="@style/reg_text_green"
        android:textColor="@color/colorLightestGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.4" />


</android.support.constraint.ConstraintLayout>